# remembro

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  remembro  seed-data.json  shell-integration.sh
.github/workflows/: ci.yml
crates/rbro/: Cargo.toml
crates/rbro/src/: main.rs
crates/rembrodd/: Cargo.toml
crates/rembrodd/src/: main.rs
crates/remembro-hook/: Cargo.toml
crates/remembro-hook/src/: main.rs
crates/remembro-lib/: Cargo.toml
crates/remembro-lib/src/: config.rs  db.rs  lib.rs  protocol.rs  search.rs
crates/remembro-mcp/: Cargo.toml
crates/remembro-mcp/src/: main.rs
docs/: AGENT_INTEGRATION.md  DESIGN.md  config.toml.example
migrations/: 001_initial.sql
nix/: package.nix  remembro-home-manager.nix  remembro-nixos-module.nix
