[package]
name = "rembrodd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rembrodd"
path = "src/main.rs"

[dependencies]
remembro-lib = { path = "../remembro-lib" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
sd-notify.workspace = true