[package]
name = "remembro-lib"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dirs.workspace = true
toml.workspace = true
shellexpand.workspace = true